@@ -1,13 +1,13 @@
 =begin
 == NAME
 tDiary: the "tsukkomi-able" web diary system.
-tdiary.rb $Revision: 1.335 $
+tdiary.rb $Revision: 1.336 $
 
 Copyright (C) 2001-2007, TADA Tadashi <sho@spc.gr.jp>
 You can redistribute it and/or modify it under GPL2.
 =end
 
-TDIARY_VERSION = '2.2.0.20080223'
+TDIARY_VERSION = '2.2.0.20080224'
 
 $:.insert( 1, File::dirname( __FILE__ ) + '/misc/lib' )
 
