@@ -1,3 +1,6 @@
+2008-02-24 TADA Tadashi <sho@spc.gr.jp>
+	* plugin/05referer.rb: fixed no saving referer on day mode.
+
 2008-02-23 TADA Tadashi <sho@spc.gr.jp>
 	* plugin/05referer.rb: fixed #49.
 
